[tool.poetry]
name = "flask-blog-api"
packages = [{ include = "app" }, { include = 'tests' }]
version = "0.1.0"
description = ""
authors = ["Khushal Chouhan khushalsingh12@gmail.com"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.0.0"
flask-sqlalchemy = "^3.1.1"
pydantic = "^2.5.2"
flask-jwt = "^0.3.2"
passlib = "^1.7.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
